<resources>
    <string name="app_name">App_mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accueil">Accueil</string>
    <string name="menu_stats">Statistiques</string>
    <string name="menu_ajoutphoto">Ajouter une photo</string>
    <string name="menu_carte">Carte</string>
    <string name="menu_classement">Classement</string>
    <string name="menu_compte">Compte</string>


    <string name="accueil_second">Accueil Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
