<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_menu_accueil"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_ajoutphoto"
            android:icon="@drawable/ic_menu_ajoutphoto"
            android:title="@string/menu_ajoutphoto" />
        <item
            android:id="@+id/nav_carte"
            android:icon="@drawable/ic_menu_carte"
            android:title="@string/menu_carte" />
        <item
            android:id="@+id/nav_classement"
            android:icon="@drawable/ic_menu_classement"
            android:title="@string/menu_classement" />
        <item
            android:id="@+id/nav_compte"
            android:icon="@drawable/ic_menu_compte"
            android:title="@string/menu_compte" />
    </group>
</menu>
