<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_accueil">

    <fragment
        android:id="@+id/nav_accueil"
        android:name="com.example.app_mobile.ui.accueil.AccueilFragment"
        android:label="@string/menu_accueil"
        tools:layout="@layout/fragment_accueil">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_accueil_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_accueil_second"
        android:name="com.example.app_mobile.ui.accueil.HomeSecondFragment"
        android:label="@string/accueil_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_accueil" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_ajoutphoto"
        android:name="com.example.app_mobile.ui.ajout_photo.PhotoFragment"
        android:label="@string/menu_ajoutphoto"
        tools:layout="@layout/fragment_ajoutphoto" >
        <action
            android:id="@+id/action_nav_ajoutphoto_to_nav_connexion"
            app:destination="@id/nav_connexion" />
    </fragment>
    <fragment
        android:id="@+id/nav_classement"
        android:name="com.example.app_mobile.ui.classement.ClassementFragment"
        android:label="@string/menu_classement" />
    <fragment
        android:id="@+id/nav_carte"
        android:name="com.example.app_mobile.ui.carte.CarteFragment"
        android:label="@string/menu_carte" />
    <fragment
        android:id="@+id/nav_compte"
        android:name="com.example.app_mobile.ui.compte.CompteFragment"
        android:label="@string/menu_compte" />
    <fragment
        android:id="@+id/nav_connexion"
        android:name="com.example.app_mobile.nav_connexion"
        android:label="fragment_connexion"
        tools:layout="@layout/fragment_connexion" >
        <action
            android:id="@+id/action_nav_connexion_to_nav_ajoutphoto"
            app:destination="@id/nav_ajoutphoto" />
    </fragment>
</navigation>